src/test/deca/context/invalid/provided/class28.java
class A {
    int x=5;
    int y=7;
    int somme(int a, int b){
        return this.x+this.y+a+b;
    }
}
{
    A a = new A();
    int b = a.getX(0,5.9);
}


